--- a/templates/404.html
+++ b/templates/404.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>404</title>
+    <link rel="shortcut icon" href="/media/icons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/error.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/404.css' %}">
 </head>
 <body>
-    <span class="code">500</span>
-    <span class="message">Server error!</span>
+    <span class="code">404</span>
+    <span class="message">The page you were looking for was moved or doesn't exist!</span>
     <a href="/home">back to home</a>
 </body>
 </html>
