--- a/templates/users/updateAvatar.html
+++ b/templates/users/updateAvatar.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Update avatar</title>
+    <link rel="shortcut icon" href="/media/icons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/forms.css' %}">
     <script src="{% static '/js/updateAvatar.js' %}" defer></script>
