--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@
     --light-red: #E03737;
     --light-gray: #A5A5A5;
     --gray: #BEBEBE;
-    --dark-gray: #222222;
+    --dark-grey: #222222;
     --white: #EEEEEE;
 }
 
@@ -20,8 +20,51 @@
     word-wrap: break-word;
 }
 
+html
+{
+    height: 100%;
+}
+
 body
 {
     font-family: -apple-system,BlinkMacSystemFont,
     Segoe UI,Roboto,Helvetica Neue,Ubuntu,sans-serif;
+    height: 100%;
+    background: var(--white);
+}
+
+.content_wrapper
+{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.color_link
+{
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 10px 20px;
+    background: var(--red);
+    color: var(--white);
+    border: none;
+    border-radius: 4px;
+    transition: 0.3s background linear;
+    margin-left: 10px;
+    text-transform: none;
+    text-decoration: none;
+}
+
+.color_link:hover
+{
+	background: var(--dark-red);
+}
+
+.author_link {
+    text-decoration: none;
+    display: flex !important;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
