--- a/templates/users/signin.html
+++ b/templates/users/signin.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign In</title>
+    <link rel="shortcut icon" href="/media/icons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/forms.css' %}">
 </head>
 <body>
     <div class="wrapper">
         <div class="form-box">
-            <span class="box-name">Sign up your account</span>
+            <span class="box-name">Sign in to your account</span>
             <form action="" method="post" novalidate>
                 {% csrf_token %}
                 {% for field in form %}
@@ -27,9 +28,13 @@
                     </div>
                 {% endfor %}
 
-                <input class="submit_btn" type="submit" value="Sign Up">
+                {% if form.non_field_errors %}
+                    {{ form.non_field_errors }}
+                {% endif %}
+
+                <input class="submit_btn" type="submit" value="Sign In">
             </form>
-            <span>Already have account? <a href="/signIn" class="redirect">Sign in</a></span>
+            <span>Haven't account? <a href="/signUp" class="redirect">Sign Up</a></span>
         </div>
     </div>
 </body>
